# Todopatamus

./: .gitignore  README.md  com.tenderowl.todopatamus.json  meson.build
.github/workflows/: ruff.yml
data/: com.tenderowl.todopatamus.desktop.in  com.tenderowl.todopatamus.gschema.xml  com.tenderowl.todopatamus.metainfo.xml.in  general.css  meson.build  todopatamus.gresource.xml
data/icons/: meson.build
data/ui/: projects_page.blp  sidebar-column.blp  tasks_page.blp  todo-details-dialog.blp  todo-details.blp  todo-entry.blp  todo-listitem.blp  todos-column.blp  window.blp  window.ui
flatpak/: com.tenderowl.todopatamus.Devel.json  com.tenderowl.todopatamus.json  gom.json  python3-peewee.json
po/: POTFILES  meson.build
todopatamus/: __init__.py  actions.py  main.py  window.py
todopatamus/models/: base.py  category.py  todo.py  todoitem.py
todopatamus/services/: db.py  todo.py  todo_service.py  utils.py
todopatamus/widgets/: projects_page.py  sidebar_column.py  tasks_page.py  todo_details.py  todo_entry.py  todo_listitem.py  todos_column.py
todopatamus/widgets/dialogs/: todo_details.py
